Avance en correcciones